# i2c-sensors

./: .gitignore  LICENSE  README.md  pyproject.toml  run.ps1
requirements/: dev.txt
src/i2cs/: alarm.py  bus.py  cli.py  device.py  ens210.py  error.py  signal.py  spl07_003.py
